added solution lab7